--- a/franske-courses/current/itc-2516/assignments.html
+++ b/franske-courses/current/itc-2516/assignments.html
@@ -353,59 +353,22 @@
 </li>
 <li>
 <p>Lab 2.3.8 - Navigate the IOS by Using Tera Term for Console Connectivity</p>
-<div class="ulist">
-<ul>
-<li>
-<p>The password for the PCs in this lab is: Cisco123</p>
-</li>
-</ul>
-</div>
 </li>
 <li>
 <p>Lab 2.9.2 - Basic Switch and End Device Configuration</p>
-<div class="ulist">
-<ul>
-<li>
-<p>The password for the PCs in this lab is: Cisco123</p>
-</li>
-</ul>
-</div>
 </li>
 <li>
 <p>PT 3.5.5 - Investigate the TCP/IP and OSI Models in Action</p>
 </li>
 <li>
 <p>Lab 3.7.10 - Use Wireshark to View Network Traffic</p>
-<div class="ulist">
-<ul>
-<li>
-<p>The password for the PCs in this lab is: netlab</p>
-</li>
-</ul>
-</div>
 </li>
 <li>
-<p>Lab 4.6.6 - View Wired and Wireless NIC Information</p>
-<div class="ulist">
-<ul>
-<li>
-<p>The password for the PCs in this lab is: netlab</p>
-</li>
-<li>
-<p><strong>Note:</strong> Use your own computer for the wireless portion, the lab computers only have wired connections</p>
-</li>
-</ul>
-</div>
+<p>Lab 4.6.6 - View Wired and Wireless NIC Information
+NOTE: Use your own computer for the wireless portion, the lab computers only have wired connections.</p>
 </li>
 <li>
 <p>Lab 7.1.6 - Use Wireshark to Examine Ethernet Frames</p>
-<div class="ulist">
-<ul>
-<li>
-<p>The password for the PCs in this lab is: netlab</p>
-</li>
-</ul>
-</div>
 </li>
 <li>
 <p>Lab 7.2.7 - View Network Device MAC Addresses</p>
@@ -453,14 +416,8 @@
 <p>Lab 17.7.6 - Troubleshoot Connectivity Issues</p>
 </li>
 <li>
-<p>Lab 17.8.1 - Design and Build a Small Business Network</p>
-<div class="ulist">
-<ul>
-<li>
-<p><strong>Note:</strong> Design your network in the Packet Tracer Software, in addition to your lab report upload your Packet Tracer File to the NetAcad site for this assignment.</p>
-</li>
-</ul>
-</div>
+<p>Lab 17.8.1 - Design and Build a Small Business Network
+NOTE: Design your network in the Packet Tracer Software, in addition to your lab report upload your Packet Tracer File to the NetAcad site for this assignment.</p>
 </li>
 </ol>
 </div>
@@ -668,14 +625,8 @@
 <p>Lab 4.2.8 - Configure Router-on-a-Stick Inter-VLAN Routing</p>
 </li>
 <li>
-<p>Lab 4.4.9 - Troubleshoot Inter-VLAN Routing</p>
-<div class="ulist">
-<ul>
-<li>
-<p>NOTE: In this lab you need to start by loading a starting configuration onto your network devices. INSERT LINK TO STARTING CONFIGS HERE!</p>
-</li>
-</ul>
-</div>
+<p>Lab 4.4.9 - Troubleshoot Inter-VLAN Routing
+NOTE: In this lab you need to start by loading a starting configuration onto your network devices. INSERT LINK TO STARTING CONFIGS HERE!</p>
 </li>
 <li>
 <p>Lab 4.5.2 - Implement Inter-VLAN Routing</p>
@@ -688,38 +639,40 @@
 </li>
 <li>
 <p>Lab 7.4.2 - Implement DHCPv4</p>
-<div class="ulist">
-<ul>
-<li>
-<p>NOTE: This lab contains substantial errors! Please make these corrections to your lab before starting:</p>
-<div class="ulist">
-<ul>
-<li>
-<p>In Part 1, Step 1a '''DO NOT''' "Record the second IP address in the Address Table for S1 VLAN 200 and enter the associated default gateway." this text is an error, you will not use the second IP address from Subnet A for anything special.</p>
-</li>
-<li>
-<p>In Part 1, Step 1b there is no place in the address table to record an address for '''S1 VLAN 1'''. Instead you should "Record the second IP address in the Address Table for '''S1 VLAN 200''' and enter the associated default gateway."</p>
-</li>
-<li>
-<p>In Part 1, Step 1c You should "Record the second IP address in the Address Table for '''S2 VLAN 1''' and enter the associated default gateway." even though the lab does not mention this.</p>
-</li>
-<li>
-<p>In Part 1, Step 5c you are asked to configure default routes on each router but we have not learned how to do this yet. We&#8217;ll learn about this in module 15. Please enter these commands, one on R1 and one on R2, in the configure terminal mode of the router:</p>
-<div class="ulist">
-<ul>
-<li>
-<p>&lt;pre&gt;R1(config)# ip route 0.0.0.0 0.0.0.0 10.0.0.2&lt;/pre&gt;</p>
-</li>
-<li>
-<p>&lt;pre&gt;R2(config)# ip route 0.0.0.0 0.0.0.0 10.0.0.1&lt;/pre&gt;</p>
-</li>
-</ul>
+<div class="openblock">
+<div class="content">
+<div class="admonitionblock note">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-note" title="Note"></i>
+</td>
+<td class="content">
+<div class="paragraph">
+<p>This lab contains substantial errors! Please make these corrections to your lab before starting:
+* In Part 1, Step 1a '''DO NOT''' "Record the second IP address in the Address Table for S1 VLAN 200 and enter the associated default gateway." this text is an error, you will not use the second IP address from Subnet A for anything special.
+* In Part 1, Step 1b there is no place in the address table to record an address for '''S1 VLAN 1'''. Instead you should "Record the second IP address in the Address Table for '''S1 VLAN 200''' and enter the associated default gateway."
+* In Part 1, Step 1c You should "Record the second IP address in the Address Table for '''S2 VLAN 1''' and enter the associated default gateway." even though the lab does not mention this.
+* In Part 1, Step 5c you are asked to configure default routes on each router but we have not learned how to do this yet. We&#8217;ll learn about this in module 15. Please enter these commands, one on R1 and one on R2, in the configure terminal mode of the router:</p>
 </div>
-</li>
-</ul>
+<div class="listingblock">
+<div class="content">
+<pre>R1(config)# ip route 0.0.0.0 0.0.0.0 10.0.0.2</pre>
 </div>
-</li>
-</ul>
+</div>
+<div class="paragraph">
+<p>R2(config)# ip route 0.0.0.0 0.0.0.0 10.0.0.1</p>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre></pre>
+</div>
+</div>
+</td>
+</tr>
+</table>
+</div>
+</div>
 </div>
 </li>
 <li>
@@ -887,7 +840,7 @@
 </div>
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2022-08-17 10:43:13 -0500<br>
+<p>Document Build Time: 2022-08-17 10:51:42 -0500<br>
 Page Version: 2022.08<br>
 <span class="image"><img src="../../../program-info/current/_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
