--- a/franske-courses/current/itc-2516/assignments.html
+++ b/franske-courses/current/itc-2516/assignments.html
@@ -364,8 +364,23 @@
 <p>Lab 3.7.10 - Use Wireshark to View Network Traffic</p>
 </li>
 <li>
-<p>Lab 4.6.6 - View Wired and Wireless NIC Information
-NOTE: Use your own computer for the wireless portion, the lab computers only have wired connections.</p>
+<p>Lab 4.6.6 - View Wired and Wireless NIC Information</p>
+<div class="openblock">
+<div class="content">
+<div class="admonitionblock note">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-note" title="Note"></i>
+</td>
+<td class="content">
+Use your own computer for the wireless portion, the lab computers only have wired connections.
+</td>
+</tr>
+</table>
+</div>
+</div>
+</div>
 </li>
 <li>
 <p>Lab 7.1.6 - Use Wireshark to Examine Ethernet Frames</p>
@@ -416,8 +431,23 @@ NOTE: Use your own computer for the wireless portion, the lab computers only hav
 <p>Lab 17.7.6 - Troubleshoot Connectivity Issues</p>
 </li>
 <li>
-<p>Lab 17.8.1 - Design and Build a Small Business Network
-NOTE: Design your network in the Packet Tracer Software, in addition to your lab report upload your Packet Tracer File to the NetAcad site for this assignment.</p>
+<p>Lab 17.8.1 - Design and Build a Small Business Network</p>
+<div class="openblock">
+<div class="content">
+<div class="admonitionblock note">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-note" title="Note"></i>
+</td>
+<td class="content">
+Design your network in the Packet Tracer Software, in addition to your lab report upload your Packet Tracer File to the NetAcad site for this assignment.
+</td>
+</tr>
+</table>
+</div>
+</div>
+</div>
 </li>
 </ol>
 </div>
@@ -625,8 +655,23 @@ NOTE: Design your network in the Packet Tracer Software, in addition to your lab
 <p>Lab 4.2.8 - Configure Router-on-a-Stick Inter-VLAN Routing</p>
 </li>
 <li>
-<p>Lab 4.4.9 - Troubleshoot Inter-VLAN Routing
-NOTE: In this lab you need to start by loading a starting configuration onto your network devices. INSERT LINK TO STARTING CONFIGS HERE!</p>
+<p>Lab 4.4.9 - Troubleshoot Inter-VLAN Routing</p>
+<div class="openblock">
+<div class="content">
+<div class="admonitionblock note">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-note" title="Note"></i>
+</td>
+<td class="content">
+In this lab you need to start by loading a starting configuration onto your network devices. INSERT LINK TO STARTING CONFIGS HERE!
+</td>
+</tr>
+</table>
+</div>
+</div>
+</div>
 </li>
 <li>
 <p>Lab 4.5.2 - Implement Inter-VLAN Routing</p>
@@ -649,11 +694,23 @@ NOTE: In this lab you need to start by loading a starting configuration onto you
 </td>
 <td class="content">
 <div class="paragraph">
-<p>This lab contains substantial errors! Please make these corrections to your lab before starting:
-* In Part 1, Step 1a '''DO NOT''' "Record the second IP address in the Address Table for S1 VLAN 200 and enter the associated default gateway." this text is an error, you will not use the second IP address from Subnet A for anything special.
-* In Part 1, Step 1b there is no place in the address table to record an address for '''S1 VLAN 1'''. Instead you should "Record the second IP address in the Address Table for '''S1 VLAN 200''' and enter the associated default gateway."
-* In Part 1, Step 1c You should "Record the second IP address in the Address Table for '''S2 VLAN 1''' and enter the associated default gateway." even though the lab does not mention this.
-* In Part 1, Step 5c you are asked to configure default routes on each router but we have not learned how to do this yet. We&#8217;ll learn about this in module 15. Please enter these commands, one on R1 and one on R2, in the configure terminal mode of the router:</p>
+<p>This lab contains substantial errors! Please make these corrections to your lab before starting:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>In Part 1, Step 1a '''DO NOT''' "Record the second IP address in the Address Table for S1 VLAN 200 and enter the associated default gateway." this text is an error, you will not use the second IP address from Subnet A for anything special.</p>
+</li>
+<li>
+<p>In Part 1, Step 1b there is no place in the address table to record an address for '''S1 VLAN 1'''. Instead you should "Record the second IP address in the Address Table for '''S1 VLAN 200''' and enter the associated default gateway."</p>
+</li>
+<li>
+<p>In Part 1, Step 1c You should "Record the second IP address in the Address Table for '''S2 VLAN 1''' and enter the associated default gateway." even though the lab does not mention this.</p>
+</li>
+<li>
+<p>In Part 1, Step 5c you are asked to configure default routes on each router but we have not learned how to do this yet. We&#8217;ll learn about this in module 15. Please enter these commands, one on R1 and one on R2, in the configure terminal mode of the router:</p>
+</li>
+</ul>
 </div>
 <div class="listingblock">
 <div class="content">
@@ -840,7 +897,7 @@ NOTE: In this lab you need to start by loading a starting configuration onto you
 </div>
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2022-08-17 10:51:42 -0500<br>
+<p>Document Build Time: 2022-08-17 11:01:03 -0500<br>
 Page Version: 2022.08<br>
 <span class="image"><img src="../../../program-info/current/_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
