--- a/franske-courses/current/itc-2516/assignments.html
+++ b/franske-courses/current/itc-2516/assignments.html
@@ -480,11 +480,23 @@ Design your network in the Packet Tracer Software, in addition to your lab repor
 <h2 id="_participation_activities"><a class="anchor" href="#_participation_activities"></a>Participation Activities</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>Any participation activities completed in the course will go here. This falls into the participation category of your course grade.
-* Complete the system test exam (5 points for completing)
-* Complete the online course feedback form (5 points for completing)
-* Complete the online practice final exam (10 points for attempting)
-* Meet with the instructor once per week to discuss course progress and ask questions (up to 10 points each based on progress)</p>
+<p>Any participation activities completed in the course will go here. This falls into the participation category of your course grade.</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Complete the system test exam (5 points for completing)</p>
+</li>
+<li>
+<p>Complete the online course feedback form (5 points for completing)</p>
+</li>
+<li>
+<p>Complete the online practice final exam (10 points for attempting)</p>
+</li>
+<li>
+<p>Meet with the instructor once per week to discuss course progress and ask questions (up to 10 points each based on progress)</p>
+</li>
+</ul>
 </div>
 </div>
 </div>
@@ -492,13 +504,29 @@ Design your network in the Packet Tracer Software, in addition to your lab repor
 <h2 id="_unit_assessments"><a class="anchor" href="#_unit_assessments"></a>Unit Assessments</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>You are responsible for completing all of the online unit assessments listed below. Multiple modules are included in single exams. These exams fall into the online assessments category of your course grade.
-* Modules 1 - 3: Basic Network Connectivity and Communications Exam
-* Modules 4 - 7: Ethernet Concepts Exam
-* Modules 8 - 10: Communicating Between Networks Exam
-* Modules 11 - 13: IP Addressing Exam
-* Modules 14 - 15: Network Application Communications Exam
-* Modules 16 - 17: Building and Securing a Small Network Exam</p>
+<p>You are responsible for completing all of the online unit assessments listed below. Multiple modules are included in single exams. These exams fall into the online assessments category of your course grade.</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Modules 1 - 3: Basic Network Connectivity and Communications Exam</p>
+</li>
+<li>
+<p>Modules 4 - 7: Ethernet Concepts Exam</p>
+</li>
+<li>
+<p>Modules 8 - 10: Communicating Between Networks Exam</p>
+</li>
+<li>
+<p>Modules 11 - 13: IP Addressing Exam</p>
+</li>
+<li>
+<p>Modules 14 - 15: Network Application Communications Exam</p>
+</li>
+<li>
+<p>Modules 16 - 17: Building and Securing a Small Network Exam</p>
+</li>
+</ul>
 </div>
 </div>
 </div>
@@ -717,12 +745,9 @@ In this lab you need to start by loading a starting configuration onto your netw
 <pre>R1(config)# ip route 0.0.0.0 0.0.0.0 10.0.0.2</pre>
 </div>
 </div>
-<div class="paragraph">
-<p>R2(config)# ip route 0.0.0.0 0.0.0.0 10.0.0.1</p>
-</div>
 <div class="listingblock">
 <div class="content">
-<pre></pre>
+<pre>R2(config)# ip route 0.0.0.0 0.0.0.0 10.0.0.1</pre>
 </div>
 </div>
 </td>
@@ -734,12 +759,18 @@ In this lab you need to start by loading a starting configuration onto your netw
 </li>
 <li>
 <p>Lab 8.5.1 - Configure DHCPv6</p>
-<div class="ulist">
-<ul>
-<li>
-<p>NOTE: In Part 1, Step 4b this lab asks you to configure a default route on each router pointed towards the other router. We haven&#8217;t learned how to configure default routes yet though so you can run the following configuration commands (one on R1 and one on R2) to fix this.</p>
 <div class="openblock">
 <div class="content">
+<div class="admonitionblock note">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-note" title="Note"></i>
+</td>
+<td class="content">
+<div class="paragraph">
+<p>In Part 1, Step 4b this lab asks you to configure a default route on each router pointed towards the other router. We haven&#8217;t learned how to configure default routes yet though so you can run the following configuration commands (one on R1 and one on R2) to fix this.</p>
+</div>
 <div class="listingblock">
 <div class="content">
 <pre>R1(config)# ipv6 route ::/0 2001:db8:acad:2::2</pre>
@@ -750,10 +781,11 @@ In this lab you need to start by loading a starting configuration onto your netw
 <pre>R2(config)# ipv6 route ::/0 2001:db8:acad:2::1</pre>
 </div>
 </div>
+</td>
+</tr>
+</table>
 </div>
 </div>
-</li>
-</ul>
 </div>
 </li>
 <li>
@@ -761,13 +793,18 @@ In this lab you need to start by loading a starting configuration onto your netw
 </li>
 <li>
 <p>Lab 13.1.11 - Configure a Wireless Network</p>
-<div class="ulist">
-<ul>
-<li>
-<p><strong>FALL 2021 NOTE:</strong> Complete the Packet Tracer version of this lab this year, wireless networking is not supported on Netlab. You should still submit a lab report as normal for this PT lab.</p>
-</li>
-<li>
-<p><strong>NOTE:</strong> Change the router settings as indicated in the lab, use these for the NEW settings:</p>
+<div class="openblock">
+<div class="content">
+<div class="admonitionblock note">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-note" title="Note"></i>
+</td>
+<td class="content">
+<div class="paragraph">
+<p>Change the router settings as indicated in the lab, use these for the NEW settings:</p>
+</div>
 <div class="ulist">
 <ul>
 <li>
@@ -799,14 +836,15 @@ In this lab you need to start by loading a starting configuration onto your netw
 </li>
 </ul>
 </div>
-</li>
-<li>
-<p><strong>NOTE:</strong> Do not complete Part 4 of this lab which is listed as optional.</p>
-</li>
-<li>
-<p><strong>NOTE:</strong> Before packing up your equipment be sure to reset your router back to factory defaults'''</p>
-</li>
-</ul>
+<div class="paragraph">
+<p><strong>NOTE:</strong> Do not complete Part 4 of this lab which is listed as optional.
+<strong>NOTE:</strong> Before packing up your equipment be sure to reset your router back to factory defaults'''</p>
+</div>
+</td>
+</tr>
+</table>
+</div>
+</div>
 </div>
 </li>
 <li>
@@ -814,12 +852,21 @@ In this lab you need to start by loading a starting configuration onto your netw
 </li>
 <li>
 <p>Lab 16.3.2 - Troubleshoot Static and Default Routes</p>
-<div class="ulist">
-<ul>
-<li>
-<p><strong>NOTE:</strong> In this lab you need to start by loading a starting configuration onto your network devices. INSERT LINK TO STARTING CONFIGS HERE!</p>
-</li>
-</ul>
+<div class="openblock">
+<div class="content">
+<div class="admonitionblock note">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-note" title="Note"></i>
+</td>
+<td class="content">
+In this lab you need to start by loading a starting configuration onto your network devices. INSERT LINK TO STARTING CONFIGS HERE!
+</td>
+</tr>
+</table>
+</div>
+</div>
 </div>
 </li>
 </ol>
@@ -862,12 +909,26 @@ In this lab you need to start by loading a starting configuration onto your netw
 <h2 id="_unit_assessments_2"><a class="anchor" href="#_unit_assessments_2"></a>Unit Assessments</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>You are responsible for completing all of the online unit assessments listed below. Multiple modules are included in single exams. These exams fall into the online assessments category of your course grade.
-* Modules 1 - 4: Switching Concepts, VLANs, and InterVLAN Routing Exam
-* Modules 5 - 6: Redundant Networks Exam
-* Modules 7 - 9: Available and Reliable Networks Exam
-* Modules 10 - 13: L2 Security and WLANs Exam
-* Modules 14 - 16: Routing Concepts and Configuration Exam</p>
+<p>You are responsible for completing all of the online unit assessments listed below. Multiple modules are included in single exams. These exams fall into the online assessments category of your course grade.</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Modules 1 - 4: Switching Concepts, VLANs, and InterVLAN Routing Exam</p>
+</li>
+<li>
+<p>Modules 5 - 6: Redundant Networks Exam</p>
+</li>
+<li>
+<p>Modules 7 - 9: Available and Reliable Networks Exam</p>
+</li>
+<li>
+<p>Modules 10 - 13: L2 Security and WLANs Exam</p>
+</li>
+<li>
+<p>Modules 14 - 16: Routing Concepts and Configuration Exam</p>
+</li>
+</ul>
 </div>
 </div>
 </div>
@@ -897,7 +958,7 @@ In this lab you need to start by loading a starting configuration onto your netw
 </div>
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2022-08-17 11:01:03 -0500<br>
+<p>Document Build Time: 2022-08-17 11:08:33 -0500<br>
 Page Version: 2022.08<br>
 <span class="image"><img src="../../../program-info/current/_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
