--- a/franske-courses/current/itc-2516/assignments.html
+++ b/franske-courses/current/itc-2516/assignments.html
@@ -321,7 +321,7 @@
 <div class="sect3">
 <h4 id="_lab_reports"><a class="anchor" href="#_lab_reports"></a>Lab Reports</h4>
 <div class="paragraph">
-<p>For each module having lab activities you will need to submit one lab report which covers all of the lab activities listed below in the module. Submissions are made through the NetAcad site. You do not need to submit answers to the questions in the activities, those are for your own learning use only. Lab activities may include remote equipment access, campus equipment, or packet tracer activities. If you work with a partner on a lab you only need to submit a single lab report for the two of you but it must have both your names on it. Each lab report is worth up to 20 points.</p>
+<p>For each module having lab activities you will need to submit one <a href="../lab-reports/" class="xref page">lab report</a> which covers all of the lab activities listed below in the module. Submissions are made through the NetAcad site. You do not need to submit answers to the questions in the activities, those are for your own learning use only. Lab activities may include remote equipment access, campus equipment, or packet tracer activities. If you work with a partner on a lab you only need to submit a single lab report for the two of you but it must have both your names on it. Each lab report is worth up to 20 points.</p>
 </div>
 <div class="admonitionblock note">
 <table>
@@ -647,7 +647,7 @@ Design your network in the Packet Tracer Software, in addition to your lab repor
 <div class="sect3">
 <h4 id="_lab_reports_2"><a class="anchor" href="#_lab_reports_2"></a>Lab Reports</h4>
 <div class="paragraph">
-<p>For each chapter having lab activities you will need to submit one lab report which covers all of the lab activities listed below in the chapter. You do not need to submit answers to the questions in the activities, those are for your own learning use only. Lab activities may include remote equipment access, campus equipment, or packet tracer activities. If you work with a partner on a lab you only need to submit a single lab report for the two of you but it must have both your names on it. Each lab report is worth up to 20 points.</p>
+<p>For each chapter having lab activities you will need to submit one <a href="../lab-reports/" class="xref page">lab report</a> which covers all of the lab activities listed below in the chapter. You do not need to submit answers to the questions in the activities, those are for your own learning use only. Lab activities may include remote equipment access, campus equipment, or packet tracer activities. If you work with a partner on a lab you only need to submit a single lab report for the two of you but it must have both your names on it. Each lab report is worth up to 20 points.</p>
 </div>
 <div class="olist arabic">
 <ol class="arabic">
@@ -830,8 +830,10 @@ In this lab you need to start by loading a starting configuration onto your netw
 </ul>
 </div>
 <div class="paragraph">
-<p><strong>NOTE:</strong> Do not complete Part 4 of this lab which is listed as optional.
-<strong>NOTE:</strong> Before packing up your equipment be sure to reset your router back to factory defaults'''</p>
+<p><strong>NOTE:</strong> Do not complete Part 4 of this lab which is listed as optional.</p>
+</div>
+<div class="paragraph">
+<p><strong>NOTE:</strong> Before packing up your equipment be sure to reset your router back to factory defaults'''</p>
 </div>
 </td>
 </tr>
@@ -943,7 +945,7 @@ In this lab you need to start by loading a starting configuration onto your netw
 </div>
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2022-08-17 11:11:22 -0500<br>
+<p>Document Build Time: 2022-08-17 12:36:50 -0500<br>
 Page Version: 2022.08<br>
 <span class="image"><img src="../../../program-info/current/_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
