--- a/franske-courses/current/itc-2516/assignments.html
+++ b/franske-courses/current/itc-2516/assignments.html
@@ -323,6 +323,18 @@
 <div class="paragraph">
 <p>For each module having lab activities you will need to submit one <a href="../lab-reports/" class="xref page">lab report</a> which covers all of the lab activities listed below in the module. Submissions are made through the NetAcad site. You do not need to submit answers to the questions in the activities, those are for your own learning use only. Lab activities may include remote equipment access, campus equipment, or packet tracer activities. If you work with a partner on a lab you only need to submit a single lab report for the two of you but it must have both your names on it. Each lab report is worth up to 20 points.</p>
 </div>
+<div class="admonitionblock tip">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-tip" title="Tip"></i>
+</td>
+<td class="content">
+If you have not done lab reports in one of Dr. Franske&#8217;s classes before, or you want to try and score better on lab reports, be sure to check out the <a href="../lab-reports/" class="xref page">instructions for writing lab reports page and example reports</a>!
+</td>
+</tr>
+</table>
+</div>
 <div class="admonitionblock note">
 <table>
 <tr>
@@ -945,7 +957,7 @@ In this lab you need to start by loading a starting configuration onto your netw
 </div>
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2022-08-17 12:36:50 -0500<br>
+<p>Document Build Time: 2022-08-17 12:40:39 -0500<br>
 Page Version: 2022.08<br>
 <span class="image"><img src="../../../program-info/current/_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
