deploy: e7673ee621fb8a347f79e64cafa00457dbfb53cb

--- a/franske-courses/current/itc-2516/assignments.html
+++ b/franske-courses/current/itc-2516/assignments.html
@@ -480,9 +480,21 @@ Design your network in the Packet Tracer Software, in addition to your lab repor
 <p>Lab 12.7.4 - Identify IPv6 Addresses (10 Points) - This activity will be submitted as a "quiz" on the Netacad site where you will enter some of your answers from the activity into the quiz.</p>
 </li>
 <li>
-<p>Participate in an online forum discussion (typically 3 quality posts or more) of each module on the Cisco Netacad site. See forum posting page for details. (up to 10 points each module based on quality)</p>
+<p>Participate in an online forum discussion (typically 3 quality posts or more) of each module on the Cisco Netacad site. See the <a href="../forum-posting/" class="xref page">forum posting page</a> for details. (up to 10 points each module based on quality)</p>
 </li>
 </ul>
+</div>
+<div class="admonitionblock tip">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-tip" title="Tip"></i>
+</td>
+<td class="content">
+Discussion forum posts are usually worth a larger portion of your final grade than most students expect! If you have not done discussion posts in one of Dr. Franske&#8217;s classes before, or you want to try and score better on discussion forum postings, be sure to check out the <a href="../forum-posting/" class="xref page">instructions for participating in forum discussions and example posts</a>!
+</td>
+</tr>
+</table>
 </div>
 </div>
 </div>
@@ -887,9 +899,21 @@ In this lab you need to start by loading a starting configuration onto your netw
 <div class="ulist">
 <ul>
 <li>
-<p>Participate in an online forum discussion (typically 3 quality posts or more) of each module on the Cisco Netacad site. See forum posting page for details. (up to 10 points each module based on quality)</p>
+<p>Participate in an online forum discussion (typically 3 quality posts or more) of each module on the Cisco Netacad site. See the <a href="../forum-posting/" class="xref page">forum posting page</a> for details. (up to 10 points each module based on quality)</p>
 </li>
 </ul>
+</div>
+<div class="admonitionblock tip">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-tip" title="Tip"></i>
+</td>
+<td class="content">
+Discussion forum posts are usually worth a larger portion of your final grade than most students expect! If you have not done discussion posts in one of Dr. Franske&#8217;s classes before, or you want to try and score better on discussion forum postings, be sure to check out the <a href="../forum-posting/" class="xref page">instructions for participating in forum discussions and example posts</a>!
+</td>
+</tr>
+</table>
 </div>
 </div>
 </div>
@@ -957,7 +981,7 @@ In this lab you need to start by loading a starting configuration onto your netw
 </div>
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2022-08-17 12:40:39 -0500<br>
+<p>Document Build Time: 2022-08-17 13:51:05 -0500<br>
 Page Version: 2022.08<br>
 <span class="image"><img src="../../../program-info/current/_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
