--- a/franske-courses/current/itc-2516/assignments.html
+++ b/franske-courses/current/itc-2516/assignments.html
@@ -240,6 +240,12 @@
 </aside>
 <article class="doc">
 <h1 class="page">ITC-2516 Assignment Details and Directions</h1>
+<div class="sect1">
+<h2 id="_ccna_1_assignment_details_and_directions"><a class="anchor" href="#_ccna_1_assignment_details_and_directions"></a>CCNA 1 Assignment Details and Directions</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>This page is organized into sections based on the category of your final grade that the assignment will fall into. Be sure to check the syllabus for information about how the categories are weighted in your final grade.</p>
+</div>
 <div class="sect2">
 <h3 id="_lab_homework_assignments"><a class="anchor" href="#_lab_homework_assignments"></a>Lab &amp; Homework Assignments</h3>
 <div class="sect3">
@@ -495,6 +501,8 @@ Discussion forum posts are usually worth a larger portion of your final grade th
 </td>
 </tr>
 </table>
+</div>
+</div>
 </div>
 </div>
 </div>
@@ -981,7 +989,7 @@ Discussion forum posts are usually worth a larger portion of your final grade th
 </div>
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2022-08-17 13:51:05 -0500<br>
+<p>Document Build Time: 2022-08-17 13:56:12 -0500<br>
 Page Version: 2022.08<br>
 <span class="image"><img src="../../../program-info/current/_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
