--- a/franske-courses/current/forum-posting/example-first.html
+++ b/franske-courses/current/forum-posting/example-first.html
@@ -242,9 +242,12 @@
 <h2 id="_example_1"><a class="anchor" href="#_example_1"></a>Example 1</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>This example post comes from an early chapter in the CCNA Security course. You can see that both the most important and most interesting parts of the chapter were clearly discusses as well as what the author thinks is the reason they are interesting and important. Questions related to the content of the chapter have been included making it easier for other students to respond to the posting.
-=== Post
-<strong>Most Important:</strong> It seemed like the most important topic covered by this chapter was an overview of security threats in section 1.2 (i.e. threat vectors, virus/trojan/worm/malware, hackers), the types of hackers (black/grey/white hat, hacktivists, state-sponsored), the types of tools they employ (password crackers, packet sniffers/crafters, rootkits to name a few), and the categories of attacks (eavesdropping, spoofing, DoS, man-in-the-middle, reconnaissance, etc) to give us an idea of how important security is in today&#8217;s networks and ways to potentially mitigate against those threats (as covered in section 1.3).</p>
+<p>This example post comes from an early chapter in the CCNA Security course. You can see that both the most important and most interesting parts of the chapter were clearly discusses as well as what the author thinks is the reason they are interesting and important. Questions related to the content of the chapter have been included making it easier for other students to respond to the posting.</p>
+</div>
+<div class="sect2">
+<h3 id="_post"><a class="anchor" href="#_post"></a>Post</h3>
+<div class="paragraph">
+<p><strong>Most Important:</strong> It seemed like the most important topic covered by this chapter was an overview of security threats in section 1.2 (i.e. threat vectors, virus/trojan/worm/malware, hackers), the types of hackers (black/grey/white hat, hacktivists, state-sponsored), the types of tools they employ (password crackers, packet sniffers/crafters, rootkits to name a few), and the categories of attacks (eavesdropping, spoofing, DoS, man-in-the-middle, reconnaissance, etc) to give us an idea of how important security is in today&#8217;s networks and ways to potentially mitigate against those threats (as covered in section 1.3).</p>
 </div>
 <div class="paragraph">
 <p><strong>Most Interesting:</strong> One interesting part of the chapter to me was the discussion of 'honeypot' servers and how Norse Dark Intelligence purposefully deploys these decoy servers and study how hackers attempt to breach their security. Afterward, they provide the information to organizations for examination allowing them to come up with countermeasures against it. Similarly, Cisco provides information and mitigation techniques against current attacks on their Cisco Security Intelligence Operations (SIO) site for network administrators.</p>
@@ -260,13 +263,17 @@
 </div>
 </div>
 </div>
+</div>
 <div class="sect1">
 <h2 id="_example_2"><a class="anchor" href="#_example_2"></a>Example 2</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>This post comes from an early chapter in the PC Hardware &amp; Software class. It clearly describes what the author thought the most important and interesting parts of the chapter where and why as well as a couple of questions related to the content of the chapter.
-=== Post
-I personally thought the most important concept from chapter one was the compatibility of components. For example processors manufactured by AMD have a physically different design to those manufactured by Intel. So, If a technician is building a computer, they must select a CPU that is compatible with the motherboard they have chosen. This is important because incompatibility can cause a computer to fail, even if all the components are operational.</p>
+<p>This post comes from an early chapter in the PC Hardware &amp; Software class. It clearly describes what the author thought the most important and interesting parts of the chapter where and why as well as a couple of questions related to the content of the chapter.</p>
+</div>
+<div class="sect2">
+<h3 id="_post_2"><a class="anchor" href="#_post_2"></a>Post</h3>
+<div class="paragraph">
+<p>I personally thought the most important concept from chapter one was the compatibility of components. For example processors manufactured by AMD have a physically different design to those manufactured by Intel. So, If a technician is building a computer, they must select a CPU that is compatible with the motherboard they have chosen. This is important because incompatibility can cause a computer to fail, even if all the components are operational.</p>
 </div>
 <div class="paragraph">
 <p>I thought the most interesting section of the chapter was the one about the differing ports and cables. Before this reading I was only familiar with the most common types of ports/cables like DVI, HDMI, USB, etc. I had heard the name of some of the other types of ports/cables, but I did not know what they were used for or how they compared to each other. I now understand each type of port/cable, and its function.</p>
@@ -276,10 +283,11 @@ I personally thought the most important concept from chapter one was the compati
 </div>
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2022-08-17 13:51:05 -0500<br>
+<p>Document Build Time: 2022-08-17 13:56:12 -0500<br>
 Page Version: 2022.08<br>
 <span class="image"><img src="../../../program-info/current/_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
+</div>
 </div>
 </div>
 </div>
