--- a/franske-courses/current/itc-2516/syllabus.html
+++ b/franske-courses/current/itc-2516/syllabus.html
@@ -379,14 +379,8 @@ Location: B109 &amp; Online</p>
 <p>ITC Info (<a href="https://info.ihitc.net" class="bare">https://info.ihitc.net</a>)</p>
 </li>
 <li>
-<p>Cisco Networking Academy (<a href="http://www.netacad.com" class="bare">http://www.netacad.com</a>)</p>
-<div class="ulist">
-<ul>
-<li>
-<p>NOTE: It is important that you keep an accurate email address on file with the Cisco Networking Academy site and/or regularly sign on to the site to check your Networking Academy Inbox. Important and time-sensitive course information may be distributed through the Networking Academy messaging system. If you have an accurate email address you can receive the information by email as well.</p>
-</li>
-</ul>
-</div>
+<p>Cisco Networking Academy (<a href="http://www.netacad.com" class="bare">http://www.netacad.com</a>)
+WARNING: It is important that you keep an accurate email address on file with the Cisco Networking Academy site and/or regularly sign on to the site to check your Networking Academy Inbox. Important and time-sensitive course information may be distributed through the Networking Academy messaging system. If you have an accurate email address you can receive the information by email as well.</p>
 </li>
 </ul>
 </div>
@@ -659,8 +653,17 @@ Location: B109 &amp; Online</p>
 <div class="paragraph">
 <p>Mid-Term grades are not officially distributed but assignment scores are made available in the online grade book as assignments are graded and you may calculate your current course grade at any time using the above instructions and weighting. It is strongly suggested that if you want to know where you stand in the class you re-create your own copy of the gradebook with appropriate weights in a spreadsheet program such as OpenOffice Calc, Microsoft Excel, or Google Sheets where you can estimate scores you will likely get on future assignments and run other "what-if" scenarios.</p>
 </div>
-<div class="paragraph">
-<p>Be aware that the final grade in online gradebooks may be calculated in a way which ignores any assignments you have not turned in. At the end of the semester assignments which have not been turned in will have scores of 0 recorded in the gradebook. If you have missing assignments this may cause your grade to suddenly drop from what was previously shown. It is your responsibility to know what assignments you have not completed, that those will become 0s if not turned in, and how that will affect your grade.</p>
+<div class="admonitionblock caution">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-caution" title="Caution"></i>
+</td>
+<td class="content">
+Be aware that the final grade in online gradebooks may be calculated in a way which ignores any assignments you have not turned in. At the end of the semester assignments which have not been turned in will have scores of 0 recorded in the gradebook. If you have missing assignments this may cause your grade to suddenly drop from what was previously shown. It is your responsibility to know what assignments you have not completed, that those will become 0s if not turned in, and how that will affect your grade.
+</td>
+</tr>
+</table>
 </div>
 </div>
 <div class="sect2">
@@ -774,7 +777,7 @@ Location: B109 &amp; Online</p>
 </div>
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2022-08-17 13:59:06 -0500<br>
+<p>Document Build Time: 2022-08-17 17:10:31 -0500<br>
 Page Version: 2022.08<br>
 <span class="image"><img src="../../../program-info/current/_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
