deploy: 66cc1cff9d2f7ef49699bdf001773a4dcb138e8e

--- a/franske-courses/current/itc-2611/syllabus.html
+++ b/franske-courses/current/itc-2611/syllabus.html
@@ -354,8 +354,23 @@ TIP: The first edition printed version of this book has many errors in it. You c
 <p>ITC Info (<a href="https://info.ihitc.net" class="bare">https://info.ihitc.net</a>)</p>
 </li>
 <li>
-<p>Cisco Networking Academy (<a href="http://www.netacad.com" class="bare">http://www.netacad.com</a>)
-WARNING: It is important that you keep an accurate email address on file with the Cisco Networking Academy site and/or regularly sign on to the site to check your Networking Academy Inbox. Important and time-sensitive course information may be distributed through the Networking Academy messaging system. If you have an accurate email address you can receive the information by email as well.</p>
+<p>Cisco Networking Academy (<a href="http://www.netacad.com" class="bare">http://www.netacad.com</a>)</p>
+<div class="openblock">
+<div class="content">
+<div class="admonitionblock warning">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-warning" title="Warning"></i>
+</td>
+<td class="content">
+It is important that you keep an accurate email address on file with the Cisco Networking Academy site and/or regularly sign on to the site to check your Networking Academy Inbox. Important and time-sensitive course information may be distributed through the Networking Academy messaging system. If you have an accurate email address you can receive the information by email as well.
+</td>
+</tr>
+</table>
+</div>
+</div>
+</div>
 </li>
 </ul>
 </div>
@@ -377,8 +392,23 @@ WARNING: It is important that you keep an accurate email address on file with th
 <p>Equipment access, both physical on campus and remote Netlab, is on a first come, first served basis.</p>
 </li>
 <li>
-<p>Open on campus lab time may also be available under the supervision of the lab assistant or ITC department instructors, contact the instructor or ITC lab assistant for more information. Students who do not show up for open lab hours they have scheduled may be restricted from registering for open lab hours in the future.
-TIP: If you are struggling with labs it&#8217;s strongly suggested you make arrangements to come to campus and work on them where you can get more immediate help if you get stuck.</p>
+<p>Open on campus lab time may also be available under the supervision of the lab assistant or ITC department instructors, contact the instructor or ITC lab assistant for more information. Students who do not show up for open lab hours they have scheduled may be restricted from registering for open lab hours in the future.</p>
+<div class="openblock">
+<div class="content">
+<div class="admonitionblock tip">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-tip" title="Tip"></i>
+</td>
+<td class="content">
+If you are struggling with labs it&#8217;s strongly suggested you make arrangements to come to campus and work on them where you can get more immediate help if you get stuck.
+</td>
+</tr>
+</table>
+</div>
+</div>
+</div>
 </li>
 </ul>
 </div>
@@ -777,7 +807,7 @@ Be aware that the final grade in online gradebooks may be calculated in a way wh
 </div>
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2022-08-17 17:10:31 -0500<br>
+<p>Document Build Time: 2022-08-17 17:17:03 -0500<br>
 Page Version: 2022.08<br>
 <span class="image"><img src="../../../program-info/current/_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
