--- a/tech-info/current/about-site.html
+++ b/tech-info/current/about-site.html
@@ -74,7 +74,16 @@
     <a class="nav-link" href="./">Technical Information</a>
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
-    <span class="nav-text">To Come!</span>
+    <button class="nav-item-toggle"></button>
+    <span class="nav-text">VoIP</span>
+<ul class="nav-list">
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="voip/cisco-phone-registration">Cisco IP Phone Registration Troubleshooting</a>
+  </li>
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="voip/cisco-phone-security">Clearing Cisco IP Phone Security Files</a>
+  </li>
+</ul>
   </li>
 </ul>
   </li>
@@ -284,7 +293,7 @@ git push</code></pre>
 </div>
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2022-08-17 17:17:03 -0500<br>
+<p>Document Build Time: 2022-08-17 18:05:20 -0500<br>
 Page Version: 2022.08<br>
 <span class="image"><img src="../../program-info/current/_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
