deploy: db3ff1706baf08e272121980c0fbad76030d6b7c

--- a/franske-courses/current/itc-2300/assignments.html
+++ b/franske-courses/current/itc-2300/assignments.html
@@ -263,31 +263,58 @@ If you have not done lab reports in one of Dr. Franske&#8217;s classes before, o
 <div class="sect3">
 <h4 id="_proxmox_ve_installation_lab"><a class="anchor" href="#_proxmox_ve_installation_lab"></a>Proxmox VE Installation Lab</h4>
 <div class="paragraph">
-<p>Find instructions for the <a href="#lab-proxmox-installation.adoc" class="xref unresolved">Proxmox VE Installation Lab here</a>.</p>
+<p>Find instructions for the <a href="lab-proxmox-installation" class="xref page">Proxmox VE Installation Lab here</a>.</p>
 </div>
 </div>
 <div class="sect3">
 <h4 id="_proxmox_ve_containers_and_cluster_lab"><a class="anchor" href="#_proxmox_ve_containers_and_cluster_lab"></a>Proxmox VE Containers and Cluster Lab</h4>
 <div class="paragraph">
-<p>Find instructions for the <a href="#lab-proxmox-containersclusters.adoc" class="xref unresolved">Proxmox VE Containers and Cluster Lab here</a>.</p>
+<p>Find instructions for the <a href="lab-proxmox-containersclusters" class="xref page">Proxmox VE Containers and Cluster Lab here</a>.</p>
 </div>
 </div>
 <div class="sect3">
 <h4 id="_vmware_esxi_installation_lab"><a class="anchor" href="#_vmware_esxi_installation_lab"></a>vmWare ESXi Installation Lab</h4>
 <div class="paragraph">
-<p>Find instructions for the <a href="#lab-vmware-esxiinstallation.adoc" class="xref unresolved">vmWare ESXi Installation Lab here</a>.</p>
+<p>Find instructions for the <a href="lab-vmware-esxiinstallation" class="xref page">vmWare ESXi Installation Lab here</a>.</p>
 </div>
 </div>
 <div class="sect3">
 <h4 id="_vmware_vsphere_vcenter_server_installation_lab"><a class="anchor" href="#_vmware_vsphere_vcenter_server_installation_lab"></a>vmWare vSphere vCenter Server Installation Lab</h4>
 <div class="paragraph">
-<p>Find instructions for the <a href="#lab-vmware-vcenterinstallation.adoc" class="xref unresolved">vmWare vSphere vCenter Server Installation Lab here</a>].</p>
+<p>Find instructions for the <a href="lab-vmware-vcenterinstallation" class="xref page">vmWare vSphere vCenter Server Installation Lab here</a>].</p>
 </div>
 </div>
 <div class="sect3">
 <h4 id="_vmware_vsphere_administration_lab"><a class="anchor" href="#_vmware_vsphere_administration_lab"></a>vmWare vSphere Administration Lab</h4>
 <div class="paragraph">
-<p>Find instructions for the <a href="#lab-vmware-vsphereadmin.adoc" class="xref unresolved">vmWare vSphere Administration Lab here</a>].</p>
+<p>Find instructions for the <a href="lab-vmware-vsphereadmin" class="xref page">vmWare vSphere Administration Lab here</a>].</p>
+</div>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_voice_over_ip_voip_labs"><a class="anchor" href="#_voice_over_ip_voip_labs"></a>Voice over IP (VoIP) Labs</h3>
+<div class="sect3">
+<h4 id="_introduction_to_voip_with_asterisk_lab"><a class="anchor" href="#_introduction_to_voip_with_asterisk_lab"></a>Introduction to VoIP with Asterisk Lab</h4>
+<div class="paragraph">
+<p>Find instructions for the <a href="lab-asterisk-introduction" class="xref page">Introduction to VoIP with Asterisk Lab here</a>.</p>
+</div>
+</div>
+<div class="sect3">
+<h4 id="_voip_provisioning_voicemail_and_sip_labs"><a class="anchor" href="#_voip_provisioning_voicemail_and_sip_labs"></a>VoIP Provisioning, Voicemail, and SIP Labs</h4>
+<div class="paragraph">
+<p>Find instructions for the <a href="lab-asterisk-provvmsip" class="xref page">VoIP Provisioning, Voicemail, and SIP Lab here</a>.</p>
+</div>
+</div>
+<div class="sect3">
+<h4 id="_voip_t1_and_pstn_access_lab"><a class="anchor" href="#_voip_t1_and_pstn_access_lab"></a>VoIP T1 and PSTN Access Lab</h4>
+<div class="paragraph">
+<p>Find instructions for the <a href="lab-asterisk-t1pstn" class="xref page">VoIP T1 and PSTN Access Lab here</a>.</p>
+</div>
+</div>
+<div class="sect3">
+<h4 id="_voip_gui_asterisk_configuration_lab"><a class="anchor" href="#_voip_gui_asterisk_configuration_lab"></a>VoIP GUI Asterisk Configuration Lab</h4>
+<div class="paragraph">
+<p>Find instructions for the <a href="lab-asterisk-guiconfig" class="xref page">vmWare vSphere vCenter Server Installation Lab here</a>].</p>
 </div>
 </div>
 </div>
@@ -552,15 +579,51 @@ Discussion forum posts are usually worth a larger portion of your final grade th
 <p>In addition you will receive a grade on a 10 minute presentation to the class. The presentation should be interesting, engaging, informative, and factually correct. It is a good idea to show off your actual work as much as possible (not just talk about it) so you are strongly encouraged to find a way to demonstrate something "live" during the presentation.</p>
 </div>
 <div class="paragraph">
-<p>The presentation score is comprised of:
-* Topic Content (30 Points)
-<strong> Was the topic appropriate for the course project? Was the content presented accurate and did it provide a good overview of the topic and the work done? Was the amount of work done appropriate for a large course project?
-* Presentation Skills (30 Points)
-</strong> How well did the group do ''explaining'' the content? Were they able to adequately answer appropriate questions from the class? Was the presentation professional and well prepared?
-* Engagement (20 Points)
-<strong> How well did the group engage the class in their presentation? This could include getting or asking questions of the class, using appropriate visual aids, etc. How well did the group express excitement and interest in the topic of their presentation?
-* Overall Quality (20 Points)
-</strong> Did you learn something or get something clarified in your mind? Did you feel listening to this presentation was worth your time? Was this a "good" presentation? Are you interested to learn more about this topic having heard this presentation? Do you have a good understanding of how you could use this to solve future problems you come across?</p>
+<p>The presentation score is comprised of:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Topic Content (30 Points)</p>
+<div class="ulist">
+<ul>
+<li>
+<p>Was the topic appropriate for the course project? Was the content presented accurate and did it provide a good overview of the topic and the work done? Was the amount of work done appropriate for a large course project?</p>
+</li>
+</ul>
+</div>
+</li>
+<li>
+<p>Presentation Skills (30 Points)</p>
+<div class="ulist">
+<ul>
+<li>
+<p>How well did the group do ''explaining'' the content? Were they able to adequately answer appropriate questions from the class? Was the presentation professional and well prepared?</p>
+</li>
+</ul>
+</div>
+</li>
+<li>
+<p>Engagement (20 Points)</p>
+<div class="ulist">
+<ul>
+<li>
+<p>How well did the group engage the class in their presentation? This could include getting or asking questions of the class, using appropriate visual aids, etc. How well did the group express excitement and interest in the topic of their presentation?</p>
+</li>
+</ul>
+</div>
+</li>
+<li>
+<p>Overall Quality (20 Points)</p>
+<div class="ulist">
+<ul>
+<li>
+<p>Did you learn something or get something clarified in your mind? Did you feel listening to this presentation was worth your time? Was this a "good" presentation? Are you interested to learn more about this topic having heard this presentation? Do you have a good understanding of how you could use this to solve future problems you come across?</p>
+</li>
+</ul>
+</div>
+</li>
+</ul>
 </div>
 <div class="paragraph">
 <p>Finally, a small portion of your grade for the project presentation (10% of the presentation score) will be writing a short review of each of the other project presentations. These are not simply participation points for filling out a review, your review will be graded for quality so be sure you listen carefully and provide useful feedback in your review.</p>
@@ -571,9 +634,12 @@ Discussion forum posts are usually worth a larger portion of your final grade th
 <div class="sect1">
 <h2 id="_archived_labs"><a class="anchor" href="#_archived_labs"></a>Archived Labs</h2>
 <div class="sectionbody">
+<div class="paragraph">
+<p><strong>This section contains information about labs that have been used in this class in the past. You are NOT responsible for completing these labs.</strong></p>
+</div>
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2022-08-17 20:29:23 -0500<br>
+<p>Document Build Time: 2022-08-17 20:51:16 -0500<br>
 Page Version: 2022.08<br>
 <span class="image"><img src="../../../program-info/current/_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
