deploy: 4a2faea8be38eadad897a23628a50c5a5cc7b456

--- a/franske-courses/current/itc-2300/assignments.html
+++ b/franske-courses/current/itc-2300/assignments.html
@@ -281,7 +281,7 @@ If you have not done lab reports in one of Dr. Franske&#8217;s classes before, o
 <div class="sect3">
 <h4 id="_vmware_vsphere_vcenter_server_installation_lab"><a class="anchor" href="#_vmware_vsphere_vcenter_server_installation_lab"></a>vmWare vSphere vCenter Server Installation Lab</h4>
 <div class="paragraph">
-<p>Find instructions for the <a href="lab-vmware-vcenterinstallation" class="xref page">vmWare vSphere vCenter Server Installation Lab here</a>].</p>
+<p>Find instructions for the <a href="lab-vmware-vcenterinstallation" class="xref page">vmWare vSphere vCenter Server Installation Lab here</a>.</p>
 </div>
 </div>
 <div class="sect3">
@@ -639,7 +639,7 @@ Discussion forum posts are usually worth a larger portion of your final grade th
 </div>
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2022-08-18 09:11:03 -0500<br>
+<p>Document Build Time: 2022-08-22 18:04:22 -0500<br>
 Page Version: 2022.08<br>
 <span class="image"><img src="../../../program-info/current/_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
