--- a/franske-courses/current/itc-2516/syllabus.html
+++ b/franske-courses/current/itc-2516/syllabus.html
@@ -396,7 +396,7 @@ WARNING: It is important that you keep an accurate email address on file with th
 <p>Equipment Labs in the CCNA 1 portion of the class must be completed with physical equipment on campus or at home with your own equipment (requires advance instructor permission).</p>
 </li>
 <li>
-<p>Equipment Labs in the CCNA 1 portion of the class must be completed with physical equipment on campus or at home with your own equipment (requires advance instructor permission) unless the instructor gives you special permission to use remote access equipment.</p>
+<p>Equipment Labs in the CCNA 2 portion of the class must be completed with physical equipment on campus or at home with your own equipment (requires advance instructor permission) unless the instructor gives you special permission to use Netlab remote access equipment based on your progress in the course.</p>
 </li>
 <li>
 <p>Equipment access, both physical on campus and remote Netlab, is on a first come, first served basis.</p>
@@ -777,7 +777,7 @@ Be aware that the final grade in online gradebooks may be calculated in a way wh
 </div>
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2022-08-18 09:11:04 -0500<br>
+<p>Document Build Time: 2022-08-22 18:04:23 -0500<br>
 Page Version: 2022.08<br>
 <span class="image"><img src="../../../program-info/current/_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
